--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -6,12 +6,12 @@
         <div class="row">
             <div class="col-md-2">Filter by:</div>
             <div class="col-md-4">
-                <input type="text" name="" id="">
+                <input type="text" [(ngModel)]="listFilter" name="" id="">
             </div>
         </div>
         <div class="row">
             <div class="col-md-6">
-                <h4>Filtered by:</h4>
+                <h4>Filtered by: {{listFilter}}</h4>
             </div>
         </div>
         <div class="table-responsive">
@@ -19,8 +19,8 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class="btn btn-primary">
-                                Show image
+                            <button (click)="toggleImage()" class="btn btn-primary">
+                                {{showImage? 'Hide':'Show'}} image
                             </button>
                         </th>
                         <th>
@@ -42,18 +42,20 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let product of products">
-                        <td></td>
+                        <td>
+                            <img *ngIf="showImage" [src]="product.imageUrl" [title]="product.productName" [style.width.px] ="imageWidth" [style.margin.px]="imageMargin" alt="">
+                        </td>
                         <td>
                             {{product.productName}}
                         </td>
                         <td>
-                            {{product.productCode}}
+                            {{product.productCode | lowercase}}
                         </td>                        
                         <td>
                             {{product.releaseDate}}
                         </td>
                         <td>
-                            {{product.price}}
+                            {{product.price | currency:'USD':'symbol':'1.2-2'}}
                         </td>
                         <td>
                             {{product.starRating}}
