Adding Custom Pipes and Creating Interfaces and Idenfying Lifecycle Hooks

--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -49,7 +49,7 @@
                             {{product.productName}}
                         </td>
                         <td>
-                            {{product.productCode | lowercase}}
+                            {{product.productCode | lowercase | ConvertToSpaces: '-'}}
                         </td>                        
                         <td>
                             {{product.releaseDate}}
