Input anad Output decoratots with event handling and nested components as input from the container component and output from the nested component

--- a/src/app/products/product-list.component.css
+++ b/src/app/products/product-list.component.css
@@ -1,3 +1,10 @@
+
+.card{
+    background-image: url(../../assets/images/17580.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
 thead{
     color: #337AB7;
 }
