--- a/src/app/products/product-list.component.html
+++ b/src/app/products/product-list.component.html
@@ -41,7 +41,7 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr *ngFor="let product of products">
+                    <tr *ngFor="let product of filteredProducts">
                         <td>
                             <img *ngIf="showImage" [src]="product.imageUrl" [title]="product.productName" [style.width.px] ="imageWidth" [style.margin.px]="imageMargin" alt="">
                         </td>
@@ -58,7 +58,8 @@
                             {{product.price | currency:'USD':'symbol':'1.2-2'}}
                         </td>
                         <td>
-                            {{product.starRating}}
+                            <!-- {{product.starRating}} -->
+                            <pm-star [rating] = 'product.starRating' (ratingClicked)="onRatingClicked($event)"></pm-star>
                         </td>
                     </tr>
                 </tbody>
